# vhg-pub

./: README.md
cpp/: .bazelrc  WORKSPACE
src/cpp/: .bazelrc  .gitignore  MODULE.bazel
src/cpp/cpp_23_demo/: .gitignore  BUILD  CMakeLists.txt  hello_test.cc  main.cc
src/cpp/hello_world/: BUILD  hello.cc
src/cpp/hello_world/lib/: BUILD  car.cc  car.h  vls.h
src/rust/argparse/: README.md
src/rust/argparse/src/: named_arg_parser.rs  validators.rs
src/rust/ping/: Cargo.toml  README.md
src/rust/ping/src/: main.rs
src/rust/simpleargs/: Cargo.toml  README.md
src/rust/simpleargs/src/: arg_validators.rs  lib.rs  utils.rs
src/rust_projects/argparse/: Cargo.toml  README.md
src/rust_projects/argparse/src/: lexer.rs  lib.rs  parser_validations.rs
src/rust_projects/argparse/src/lexer/: validators.rs
